# darwin

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATABASE_SETUP.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_STATUS.md  DOCKER.md  Dockerfile.api  Dockerfile.worker  ENV_VARIABLES_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  RAILWAY_SETUP.md  README.md  SERVICES.md  STATUS.md  SUPPORTED_MODELS.md  VERCEL_SETUP.md  alembic.ini  docker-compose.yml  init_database.py  pyproject.toml  setup.py  setup_database.sh  start_services.sh  stop_services.sh  test_ppo_training.py
.github/workflows/: tests.yml
darwin/: __init__.py  cli.py
darwin-ui/: .env.example  Dockerfile  README.md  middleware.ts  package-lock.json  package.json
darwin-ui/app/: layout.tsx
darwin-ui/app/(auth)/: layout.tsx
darwin-ui/app/(dashboard)/: layout.tsx
darwin-ui/components/: agent-status-card.tsx  comparison-table.tsx  equity-curve-chart.tsx  equity-overlay-chart.tsx  graduation-progress.tsx  invite-modal.tsx  metric-card.tsx  multi-run-training.tsx  run-selector.tsx  tensorboard-viewer.tsx
darwin-ui/types/: next-auth.d.ts
darwin/api/: celery_app.py  main.py
darwin/api/db/: __init__.py  models.py  postgres.py
darwin/api/middleware/: __init__.py  auth.py
darwin/api/models/: __init__.py  rl.py  (+5 more)
darwin/evaluation/: __init__.py  meta_report.py  metrics.py  plots.py  run_report.py
darwin/features/: __init__.py  bucketing.py  indicators.py  pipeline.py
darwin/llm/: README.md  __init__.py  backend.py  example.py  harness.py  mock.py  parser.py  prompts.py  rate_limiter.py
darwin/playbooks/: __init__.py  always_signal.py  base.py  breakout.py  pullback.py
darwin/rl/: FULL_LOOP_CHECKLIST.md  README.md  TRAINING_BEST_PRACTICES.md  __init__.py
darwin/runner/: __init__.py  checkpointing.py  experiment.py  llm_history.py  progress.py
darwin/schemas/: __init__.py  artifact_header.py  candidate.py  decision_event.py  llm_payload.py  llm_response.py  outcome_label.py  position.py  run_config.py  run_manifest.py
darwin/simulator/: __init__.py  exits.py  position.py  position_manager.py
darwin/storage/: __init__.py  candidate_cache.py  interface.py  outcome_labels.py  position_ledger.py
darwin/utils/: __init__.py  data_loader.py  helpers.py  logging.py  validation.py
docs/: REPLAY_LAB_JIT_BUDGET.md  REPLAY_LAB_PAGINATION.md  architecture.md  features.md  playbooks.md
docs/api/: README.md
docs/rl/: architecture.md  deployment.md  quickstart.md
examples/: aggressive.json  basic_breakout.json  basic_pullback.json  conservative.json  multi_playbook.json  rl_enabled_run.json  simple_test.py
scripts/: check_replay_lab_budget.sh  test_replay_lab_pagination.py  validate_deployment_env.py
tests/: __init__.py  conftest.py  test_replay_lab_integration.py
tests/fixtures/: __init__.py  market_data.py
tests/integration/: __init__.py  test_checkpointing.py  test_end_to_end.py  test_rl_full_workflow.py  test_rl_gate_training.py  test_rl_integration.py
tests/property/: test_simulator_invariants.py
tests/unit/: __init__.py  test_features.py  test_llm.py  test_playbooks.py  test_rl_foundation.py  test_rl_gate_agent.py  test_rl_graduation.py  test_rl_meta_learner_agent.py  test_rl_monitoring.py  test_rl_portfolio_agent.py  test_schemas.py  test_simulator.py  test_storage.py  test_utils.py
tools/: build_meta_report.py  build_report.py  run_experiment.py
(+79 files in other folders)
